--- a/client/src/components/main/pages/contact/contact.css
+++ b/client/src/components/main/pages/contact/contact.css
@@ -95,6 +95,7 @@
 }
 @media only screen and (max-width: 860px) {
   .contact-form-flex, .contact-flex-dirCol {
+    text-align: center;
     align-items: center;
   }
 }
